# AnemoiLink

./: .gitignore  CMakeLists.txt  Drone.cpp  Drone.hpp  Drone.i  Drone.py  ManualController  ManualController.cpp  ManualController.hpp  Remote  Remote.cpp  build.sh  build_exe.sh  build_py.sh  clean.sh  common.h
Controls/: DirectControls.cpp  DirectControls.hpp
Sensors/: Sensors.hpp  rpcSensors.cpp
